db-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: db-svc
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: db
